Remove Azure deployment guide and deployment script; update form submission handling in server.js and add thank you page.

--- a/public/index.html
+++ b/public/index.html
@@ -266,7 +266,7 @@
                     Your form has been successfully submitted!
                 </div>
                 
-                <form id="azureForm" onsubmit="return handleSubmit(event)">
+                <form id="azureForm" action="/submit" method="POST">
                     <div class="form-row">
                         <div class="form-col">
                             <div class="form-group">
