--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #e6f4ff;
+      background: #000b14;
     }
     h1 {
       color: #0078d4;
